--- a/index.html
+++ b/index.html
@@ -3,27 +3,188 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Swifture</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Swifture | Quality You Can Click</title>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #111;
+      color: #fff;
+    }
+
+    .info-container {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      z-index: 1000;
+    }
+
+    .info-card {
+      background: rgba(255, 140, 0, 0.1);
+      border: 2px solid #f7931e;
+      border-radius: 10px;
+      padding: 12px 18px;
+      font-size: 1em;
+      font-weight: 600;
+      text-align: center;
+      box-shadow: 0 6px 20px rgba(247, 147, 30, 0.35);
+      min-width: 170px;
+      max-width: 190px;
+      min-height: 48px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .info-card a {
+      color: #f7931e;
+      text-decoration: none;
+      font-weight: 700;
+    }
+
+    .header {
+      width: 100%;
+      height: 33vh;
+      background: url('images/header.png') center center no-repeat;
+      background-size: cover;
+      margin-top: 0;
+    }
+
+    .main {
+      padding: 40px 30px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: flex-start;
+      min-height: 67vh;
+    }
+
+    .product-card {
+      background-color: #1c1c1c;
+      border-radius: 10px;
+      padding: 25px;
+      width: 260px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
+      text-align: center;
+    }
+
+    .product-card img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+
+    .product-card h3 {
+      margin: 10px 0;
+      color: #fff;
+    }
+
+    .product-card p {
+      color: #ccc;
+      font-size: 0.9em;
+    }
+
+    .product-card a {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background-color: #f7931e;
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    .product-card a:hover {
+      background-color: #d97900;
+    }
+
+    #clock {
+      font-size: 1.3em;
+      letter-spacing: 1px;
+      font-weight: bold;
+      color: #f7931e;
+    }
+
+    #calendar {
+      font-weight: bold;
+    }
+
+    #weather {
+      color: #eee;
+    }
+
+  </style>
 </head>
 <body>
-  <header>
-    <img src="assets/header.png" alt="Swifture header" class="header-img" />
-  </header>
 
+  <!-- Info Cards Stacked Top Right -->
   <div class="info-container">
-    <div class="info-box calendar" id="calendarBox">📅 Wednesday, July 2, 2025</div>
-
-    <div class="info-box clock" id="flipClock">
-      <div class="flip-card" id="hours">00</div>
-      <div class="colon">:</div>
-      <div class="flip-card" id="minutes">00</div>
-    </div>
-
-    <div class="info-box weather">⛅ Houston: +30°C</div>
-    <div class="info-box email">📧 support@swifture.co</div>
+    <div class="info-card" id="calendar">📅 Loading date...</div>
+    <div class="info-card" id="clock">⏰ Loading time...</div>
+    <div class="info-card" id="weather">🌤️ Loading weather...</div>
+    <div class="info-card"><a href="mailto:support@swifture.co">📩 support@swifture.co</a></div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Header Image -->
+  <div class="header"></div>
+
+  <!-- Product Grid -->
+  <div class="main">
+    <div class="product-card">
+      <img src="images/product1.png" alt="Product 1" />
+      <h3>Product Title 1</h3>
+      <p>Short product description goes here.</p>
+      <a href="#">Shop at Amazon</a>
+    </div>
+
+    <div class="product-card">
+      <img src="images/product2.png" alt="Product 2" />
+      <h3>Product Title 2</h3>
+      <p>Short product description goes here.</p>
+      <a href="#">Shop at Amazon</a>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script>
+    function updateCalendar() {
+      const now = new Date();
+      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+      document.getElementById('calendar').textContent = `📅 ${now.toLocaleDateString(undefined, options)}`;
+    }
+
+    function updateClock() {
+      const now = new Date();
+      const time = now.toLocaleTimeString();
+      document.getElementById('clock').textContent = `⏰ ${time}`;
+    }
+
+    async function fetchWeather() {
+      try {
+        const ipInfo = await fetch('https://ipapi.co/json').then(r => r.json());
+        const city = ipInfo.city;
+        const weather = await fetch(`https://wttr.in/${city}?format=%t+%c`).then(r => r.text());
+        document.getElementById('weather').textContent = `🌤️ ${city}: ${weather}`;
+      } catch {
+        document.getElementById('weather').textContent = '⚠️ Weather unavailable';
+      }
+    }
+
+    updateCalendar();
+    updateClock();
+    setInterval(updateClock, 1000);
+    fetchWeather();
+  </script>
 </body>
 </html>
